server.log
   Compiling iceweave v0.1.0 (/home/adarsh/Documents/dbmsproj/dbms-project)
error[E0252]: the name `AppState` is defined multiple times
  --> src/adapters/rest.rs:10:5
   |
 8 | use crate::AppState;
   |     --------------- previous import of the type `AppState` here
 9 |
10 | use crate::AppState;
   |     ^^^^^^^^^^^^^^^ `AppState` reimported here
   |
   = note: `AppState` must be defined only once in the type namespace of this module

warning: unused import: `crate::AppState`
  --> src/adapters/rest.rs:10:5
   |
10 | use crate::AppState;
   |     ^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0252`.
warning: `iceweave` (bin "iceweave") generated 1 warning
error: could not compile `iceweave` (bin "iceweave") due to 1 previous error; 1 warning emitted
